--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="theme-color" content="#000000">
-        <link rel="shortcut icon" href="da6344851f63699c30097c087289842c.png">
+        <link rel="shortcut icon" href="logo.png">
         <title>Ôn tập - kiểm tra năng định</title>
     
     </head>
     <body>
         <div id="root"></div>
-    <script type="text/javascript" src="manifest.85f4f337e94b40a6c472.js"></script><script type="text/javascript" src="vendor.24fe3886d19262b9afe3.js"></script><script type="text/javascript" src="bundle.e3ba2b1c2fb6198bd10b.js"></script></body>
+    <script type="text/javascript" src="manifest.85f4f337e94b40a6c472.js"></script><script type="text/javascript" src="vendor.24fe3886d19262b9afe3.js"></script><script type="text/javascript" src="bundle.dbf3de74c32d9d92be36.js"></script></body>
 </html>
