--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="theme-color" content="#000000">
         <link rel="shortcut icon" href="logo.png">
+        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
         <title>Ôn tập - kiểm tra năng định</title>
     
     </head>
