--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="theme-color" content="#000000">
         <link rel="shortcut icon" href="logo.png">
         <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
+        <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
         <title>Ôn tập - kiểm tra năng định</title>
     
     </head>
